# solana_program_deployment

./: Anchor.toml  Cargo.toml  README.md  package-lock.json
migrations/: deploy.ts
programs/program_deploy_process/: Cargo.toml
programs/program_deploy_process/src/: lib.rs
tests/: program_deploy_process.ts
